--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -6,33 +6,31 @@
     $color-secondary: null
 ) {
     &::-webkit-scrollbar {
-        display: none;
         width: $scroll-width;
     }
 
     &::-webkit-scrollbar-thumb {
         border: $border-width solid transparent;
         background-clip: content-box;
+        background-color: transparent;
         border-radius: $border-radius;
-
-        @if $color-primary {
-            background-color: $color-primary;
-        } @else {
-            background-color: $color-foregroundSecondary;
-        }
-
-        &:hover {
-            @if $color-secondary {
-                background-color: $color-secondary;
-            } @else {
-                background-color: $color-foregroundTertiary;
-            }
-        }
     }
 
     &:hover {
-        &::-webkit-scrollbar {
-            display: block;
+        &::-webkit-scrollbar-thumb {
+            @if $color-primary {
+                background-color: $color-primary;
+            } @else {
+                background-color: $color-foregroundSecondary;
+            }
+
+            &:hover {
+                @if $color-secondary {
+                    background-color: $color-secondary;
+                } @else {
+                    background-color: $color-foregroundTertiary;
+                }
+            }
         }
     }
 }
